patches/union-defctor
Bottom: 9c0f15c67d5f45e4b87958670eead653872c70dc
Top:    4f68360f354ae015bcb1354c52a88563d299ad26
Author: scott snyder <sss@karma>
Date:   2021-12-15 10:17:36 -0500

Fix false positive with unions with default ctors.

We get a false positive uninitialized variable warning from this source:

union CachedPointer
{
public:
  CachedPointer() : m_a(nullptr) {}
  int* get() const;
  int* m_a;
};


void test1()
{
  CachedPointer cp1;
  cp1.get();
}


$ cppcheck x.cc
Checking x.cc ...
x.cc:13:3: error: Uninitialized variable: cp1 [uninitvar]
  cp1.get();
  ^


Try to fix by recognizing default constructors of unions.

